--- a/index.html
+++ b/index.html
@@ -1,105 +1,169 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Bikerz Zone</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/styles.css">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body class="container">
     <header>
-     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-          <div class="container-fluid">
-            <a class="navbar-brand fw-bold" href="#">Bikerz Zone</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fw-semibold">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Bikes</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Discount</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link me-5" href="#">Blogs</a>
-                </li>
-              </ul>
-                <button class="btn btn-outline-success" type="Login">Login</button>
-            </div>
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand fw-bold" href="#">Bikerz Zone</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fw-semibold">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Bikes</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Discount</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link me-5" href="#">Blogs</a>
+              </li>
+            </ul>
+            <button class="btn btn-outline-success" type="Login">Login</button>
           </div>
-        </nav>
-        <!--=======================
+        </div>
+      </nav>
+      <!--=======================
            Banner slider section 
           ================================-->
-          <div id="carouselExample" class="carousel slide bg-danger rounded bg-opacity-10 p-5">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <div class="row">
-                    <div class="col-12 col-md-6 d-flex justify-content-center align-items-center">
-                        <div>
-                            <h1>Ride-on R15 V4 with Smile
-                            </h1>
-                            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.
-                            </p>
-                            <button class="btn btn-bz-danger">Purchase</button>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6">
-                        <img src="images/bike-1.png" class="d-block w-100" alt="...">
-                    </div>
+      <div id="carouselExample"class="carousel slide bg-danger rounded bg-opacity-10 p-5">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="row">
+              <div class="col-12 col-md-6 d-flex justify-content-center align-items-center">
+                <div>
+                  <h1>Ride-on R15 V4 with Smile</h1>
+                  <p>
+                    Amet minim mollit non deserunt ullamco est sit aliqua dolor
+                    do amet sint. Velit officia consequat duis enim velit
+                    mollit.
+                  </p>
+                  <button class="btn btn-bz-danger">Purchase</button>
                 </div>
               </div>
-              <div class="carousel-item">
-                <div class="row">
-                    <div class="col-12 col-md-6 d-flex justify-content-center align-items-center">
-                        <div>
-                            <h1>Ride-on R15 V4 with Smile
-                            </h1>
-                            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.
-                            </p>
-                            <button class="btn btn-danger">Purchase</button>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6">
-                        <img src="images/bike-2.png" class="d-block w-100" alt="...">
-                    </div>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <div class="row">
-                    <div class="col-12 col-md-6 d-flex justify-content-center align-items-center">
-                        <div>
-                            <h1>Ride-on R15 V4 with Smile
-                            </h1>
-                            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.
-                            </p>
-                            <button class="btn btn-danger">Purchase</button>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6">
-                        <img src="images/bike-3.png" class="d-block w-100" alt="...">
-                    </div>
-                </div>
+              <div class="col-12 col-md-6">
+                <img src="images/bike-1.png" class="d-block w-100" alt="..." />
               </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon bikerz-zone-light-red" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-              <span class="carousel-control-next-icon bikerz-zone-light-red" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
           </div>
+          <div class="carousel-item">
+            <div class="row">
+              <div class="col-12 col-md-6 d-flex justify-content-center align-items-center">
+                <div>
+                  <h1>Ride-on R15 V4 with Smile</h1>
+                  <p>
+                    Amet minim mollit non deserunt ullamco est sit aliqua dolor
+                    do amet sint. Velit officia consequat duis enim velit
+                    mollit.
+                  </p>
+                  <button class="btn btn-danger">Purchase</button>
+                </div>
+              </div>
+              <div class="col-12 col-md-6">
+                <img src="images/bike-2.png" class="d-block w-100" alt="..." />
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="row">
+              <div class="col-12 col-md-6 d-flex justify-content-center align-items-center">
+                <div>
+                  <h1>Ride-on R15 V4 with Smile</h1>
+                  <p>
+                    Amet minim mollit non deserunt ullamco est sit aliqua dolor
+                    do amet sint. Velit officia consequat duis enim velit
+                    mollit.
+                  </p>
+                  <button class="btn btn-danger">Purchase</button>
+                </div>
+              </div>
+              <div class="col-12 col-md-6">
+                <img src="images/bike-3.png" class="d-block w-100" alt="..." />
+              </div>
+            </div>
+          </div>
+        </div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExample"
+          data-bs-slide="prev"
+        >
+          <span
+            class="carousel-control-prev-icon bikerz-zone-light-red"
+            aria-hidden="true"
+          ></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExample"
+          data-bs-slide="next"
+        >
+          <span
+            class="carousel-control-next-icon bikerz-zone-light-red"
+            aria-hidden="true"
+          ></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
     </header>
+       <!--====================
+        Main section
+       ================== -->
+<main>
+  <!-- section-1 -->
+  <section class="text-start text-md-center">
+    <h1 class="display-7 fw-bold mt-5">Hot Bikes In This Year</h1>
+    <p class="text-danger">Best Bike Collection</p>
+    <hr class="w-25 border-danger mx-auto">
+    <div class="row mt-5 px-5 gx-5 row-cols-1 row-cols-sm-2 row-cols-md-3">
+      <div class="col">
+        <img class="w-100" src="images/feature-bike.jpg" alt="">
+      </div>
+      <div class="col">
+         <img class="w-75" src="images/feature-bike.jpg" alt="">
+      </div>
+      <div class="col">
+         <img class="w-100" src="images/feature-bike.jpg" alt="">
+      </div>
 
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    </div>
+  </section>
+  <!-- section-2 -->
+  <section>
+    
+  </section>
+</main>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
