--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-      crossorigin="anonymous"
-    />
+      crossorigin="anonymous"/>
     <link rel="stylesheet" href="css/styles.css" />
+    <script src="https://kit.fontawesome.com/e52eb25679.js" crossorigin="anonymous"></script>
   </head>
   <body class="container">
     <header>
@@ -62,7 +62,7 @@
                     do amet sint. Velit officia consequat duis enim velit
                     mollit.
                   </p>
-                  <button class="btn btn-bz-danger">Purchase</button>
+                  <button class="btn btn-danger">Purchase</button>
                 </div>
               </div>
               <div class="col-12 col-md-6">
@@ -114,7 +114,7 @@
           data-bs-slide="prev"
         >
           <span
-            class="carousel-control-prev-icon bikerz-zone-light-red"
+            class="carousel-control-prev-icon bikerz-zone-light-red bikerz-zone-control-icon"
             aria-hidden="true"
           ></span>
           <span class="visually-hidden">Previous</span>
@@ -126,7 +126,7 @@
           data-bs-slide="next"
         >
           <span
-            class="carousel-control-next-icon bikerz-zone-light-red"
+            class="carousel-control-next-icon bikerz-zone-light-red bikerz-zone-control-icon"
             aria-hidden="true"
           ></span>
           <span class="visually-hidden">Next</span>
@@ -156,10 +156,178 @@
     </div>
   </section>
   <!-- section-2 -->
-  <section>
-    
+  <section class="bg-info bg-opacity-25 rounded py-5 px-3">
+    <h1 class="tex text-center mt-5">New Arrival</h1>
+
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+      <div class="col">
+        <div class="card h-100">
+          <img src="images/bike-1.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+          <div class="card-footer">
+            <button class="btn btn-outline-danger">Purchase</button>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="images/bike-2.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+          </div>
+          <div class="card-footer">
+            <button class="btn btn-outline-danger">Purchase</button>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="images/bike-3.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+          </div>
+          <div class="card-footer">
+            <button class="btn btn-outline-danger">Purchase</button>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
+  <!-- section-3 -->
+  <section>
+    <h1 class="text-center mt-5">Happy <span class="text-warning">Clients</span></h1>
+    <div class="row row-cols-1 row-cols-md-3 g-4 my-5">
+      <div class="col">
+        <div class="card h-100">
+          <img src="images/user-1.png" class="card-img-top w-75 mx-auto mt-3" alt="...">
+          <div class="card-body text-center">
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="text-warning">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star-half-stroke"></i>
+              <h5 class="text-primary">Michel Jackson</h5>
+              <p>Banker, Boston</p>
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100 text-center">
+          <img src="images/user-2.png" class="card-img-top w-75 mx-auto mt-3" alt="...">
+          <div class="card-body">
+            <p class="card-text">This is a short card.</p>
+            <p class="text-warning">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star-half-stroke"></i>
+              <i class="fa-regular fa-star"></i>
+              <h5 class="text-primary">Sarah Jhinson</h5>
+              <p>Accountant,California</p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100 text-center">
+          <img src="images/user-3.png" class="card-img-top w-75 mx-auto mt-3" alt="...">
+          <div class="card-body">
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+            <p class="text-warning">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star-half-stroke"></i>
+              <h5 class="text-primary">Amanda Jepson</h5>
+              <p>CTO,San Fransisco</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+    <!-- section-4 -->
+    <section class="bg-secondary-subtle py-3 px-5">
+      <h1 class="text-center my-5 py-5">Frequently Asked <span class="text-warning">Questions</span></h1>
+      <div class="row row-cols-1 row-cols-md-2 g-4">
+        <div class="col text-center">
+          <img class="w-50" src="images/faq.png" alt="">
+        </div>
+        <div class="col">
+          <div class="accordion" id="accordionExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingOne">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  Accordion Item #1
+                </button>
+              </h2>
+              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  Accordion Item #2
+                </button>
+              </h2>
+              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingThree">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  Accordion Item #3
+                </button>
+              </h2>
+              <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 </main>
+<!-- Footer Section -->
+<footer class="bg-black mt-5 p-5 text-white">
+    <div class="row row-cols-sm-1 row-cols-md-2">
+      <div class="col-md-8">
+        <div class="d-flex">
+          <p><a class="text-decoration-none text-white me-5" href="">License</a></p>
+          <p><a class="text-decoration-none text-white" href="">Download Now</a></p>
+        </div>
+      <div class="d-flex flex-wrap">
+        <p><a class="text-decoration-none text-white me-4" href="">Features </a></p>
+        <p><a class="text-decoration-none text-white me-3"href="">About</a></p>
+        <p><a class="text-decoration-none text-white me-3"href="">Pricing</a></p>
+        <p><a class="text-decoration-none text-white me-3" href="">Careers</a></p>
+        <p><a class="text-decoration-none text-white me-3" href="">Help</a></p>
+        <p><a class="text-decoration-none text-white"href="">Privacy Policy</a></p>
+      </div>
+      <p>© Copyright Reveal. All Rights Reserved</p>
+    </div>
+    <div class="col-md-4">
+      <h5>Get the App</h5>
+      <img class="w-50 mt-2"src="images/ios.png" alt="">
+      <img class="w-50 mt-2"src="images/android.png" alt="">
+    </div>
+  </div>
+</footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
