--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card h-100">
-          <img src="images/bike-1.png" class="card-img-top" alt="...">
+          <img src="images/bike-4.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -174,7 +174,7 @@
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="images/bike-2.png" class="card-img-top" alt="...">
+          <img src="images/bike-6.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -186,7 +186,7 @@
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="images/bike-3.png" class="card-img-top" alt="...">
+          <img src="images/bike-8.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
