--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"/>
     <link rel="stylesheet" href="css/styles.css" />
-    <script src="https://kit.fontawesome.com/e52eb25679.js" crossorigin="anonymous"></script>
   </head>
   <body class="container">
     <header>
@@ -62,7 +61,7 @@
                     do amet sint. Velit officia consequat duis enim velit
                     mollit.
                   </p>
-                  <button class="btn btn-danger">Purchase</button>
+                  <button class="btn btn-danger mb-3 mb-md-0">Purchase</button>
                 </div>
               </div>
               <div class="col-12 col-md-6">
