--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Bikerz Zone</title>
+    <!-- bootstrap link -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"/>
+      <!-- css link -->
     <link rel="stylesheet" href="css/styles.css" />
+    <!-- fontawesome link -->
+    <script src="https://kit.fontawesome.com/e52eb25679.js" crossorigin="anonymous"></script>
   </head>
   <body class="container">
     <header>
